remove labels from input elements to fix layout issue: inline and block issue

--- a/index.css
+++ b/index.css
@@ -109,9 +109,6 @@ section#appointment-tracker {
     justify-content: stretch;
     width: 100%;
   }
-  label{
-    display:block;
-  }
 
   form {
     display: flex;
